# KATSS

./: .gitignore  CMakeLists.txt  README.md
src/: Regex.c  Regex.h  SKA.c  SKA.ggo  SKA_cmdl.c  SKA_cmdl.h  bppHashTable.c  bppHashTable.h  bppPipeline.c  bppPipeline.ggo  bppPipeline_cmdl.c  bppPipeline_cmdl.h  ire_fold.c  ire_fold.h  kmerHashTable.c  kmerHashTable.h  kmer_counter.c  kmer_counter.h  parallel_helpers.c  parallel_helpers.h  rna_file_parser.c  rna_file_parser.h  string_utils.c  string_utils.h  utils.c  utils.h
src/C-Thread-Pool/: example  example.c  thpool.h
src/c_thread_pool/: thpool.c
